NetBSD Problem Report #52083

From root@pip.kardel.name  Fri Mar 17 09:45:53 2017
Return-Path: <root@pip.kardel.name>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id C31867A25E
	for <gnats-bugs@gnats.NetBSD.org>; Fri, 17 Mar 2017 09:45:53 +0000 (UTC)
Message-Id: <20170317094548.25054DA2CB0@pip.kardel.name>
Date: Fri, 17 Mar 2017 10:45:48 +0100 (CET)
From: kardel@netbsd.org
Reply-To: kardel@netbsd.org
To: gnats-bugs@NetBSD.org
Subject: panic: trap - route change -inet6 default -reject
X-Send-Pr-Version: 3.95

>Number:         52083
>Category:       kern
>Synopsis:       panic: trap - route change -inet6 default -reject
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Mar 17 09:50:00 +0000 2017
>Closed-Date:    Sat Mar 18 07:26:05 +0000 2017
>Last-Modified:  Tue Mar 21 04:05:01 +0000 2017
>Originator:     Frank Kardel
>Release:        NetBSD 7.99.65
>Organization:

>Environment:


System: NetBSD pip 7.99.65 NetBSD 7.99.65 (PIPGEN) #9: Tue Mar 7 18:39:19 CET 2017 kardel@xxx:/fs/raid2a/src/NetBSD/cur/src/obj.amd64/sys/arch/amd64/compile/PIPGEN amd64
Architecture: x86_64
Machine: amd64
>Description:
	-current 20170307 panics on "route change -inet6 default -reject"
(gdb) bt
#0  0xffffffff8021a045 in cpu_reboot (howto=howto@entry=260, bootstr=bootstr@entry=0x0) at /fs/raid2a/src/NetBSD/cur/src/sys/arch/amd64/amd64/machdep.c:674
#1  0xffffffff80988f8c in vpanic (fmt=fmt@entry=0xffffffff810d6eba "trap", ap=ap@entry=0xfffffe813b30b8b8) at /fs/raid2a/src/NetBSD/cur/src/sys/kern/subr_prf.c:342
#2  0xffffffff80989040 in panic (fmt=fmt@entry=0xffffffff810d6eba "trap") at /fs/raid2a/src/NetBSD/cur/src/sys/kern/subr_prf.c:258
#3  0xffffffff8021bc92 in trap (frame=0xfffffe813b30b9f0) at /fs/raid2a/src/NetBSD/cur/src/sys/arch/amd64/amd64/trap.c:298
#4  0xffffffff8020115e in alltraps ()
#5  0xffffffff80a18156 in if_is_deactivated (ifp=ifp@entry=0x0) at /fs/raid2a/src/NetBSD/cur/src/sys/net/if.c:1181
#6  0xffffffff80a51e08 in route_output_change (rtm=0xfffffe85f6e69f50, info=0xfffffe813b30bbe8, rt=0xfffffe88229034f0) at /fs/raid2a/src/NetBSD/cur/src/sys/net/rtsock.c:641
#7  route_output (m=0xfffffe8822ba7400, so=0xfffffe870523d008) at /fs/raid2a/src/NetBSD/cur/src/sys/net/rtsock.c:898
#8  0xffffffff80a4fce2 in route_send (l=0xfffffe881ec4d920, control=0x0, nam=0x0, m=0xfffffe8822ba7400, so=0xfffffe870523d008) at /fs/raid2a/src/NetBSD/cur/src/sys/net/rtsock.c:408
#9  route_send_wrapper (a=0xfffffe870523d008, b=0xfffffe8822ba7400, c=0x0, d=0x0, e=0xfffffe881ec4d920) at /fs/raid2a/src/NetBSD/cur/src/sys/net/rtsock.c:1895
#10 0xffffffff809ba89d in sosend (so=0xfffffe870523d008, addr=0x0, uio=0xfffffe813b30bdf0, top=0xfffffe8822ba7400, control=0x0, flags=<optimized out>, l=0xfffffe881ec4d920) at /fs/raid2a/src/NetBSD/cur/src/sys/kern/uipc_socket.c:1071
#11 0xffffffff809a0398 in soo_write (fp=<optimized out>, offset=<optimized out>, uio=<optimized out>, cred=<optimized out>, flags=<optimized out>) at /fs/raid2a/src/NetBSD/cur/src/sys/kern/sys_socket.c:118
#12 0xffffffff80994632 in dofilewrite (fd=fd@entry=3, fp=0xfffffe85be2aac40, buf=0xbb00a9c0, nbyte=160, offset=<optimized out>, flags=flags@entry=1, retval=retval@entry=0xfffffe813b30beb0)
    at /fs/raid2a/src/NetBSD/cur/src/sys/kern/sys_generic.c:355
#13 0xffffffff80994739 in sys_write (l=<optimized out>, uap=0xfffffe813b30bf00, retval=0xfffffe813b30beb0) at /fs/raid2a/src/NetBSD/cur/src/sys/kern/sys_generic.c:323
#14 0xffffffff8023f705 in sy_call (rval=0xfffffe813b30beb0, uap=0xfffffe813b30bf00, l=0xfffffe881ec4d920, sy=0xffffffff8147da40 <sysent+96>) at /fs/raid2a/src/NetBSD/cur/src/sys/sys/syscallvar.h:65
#15 sy_invoke (code=4, rval=0xfffffe813b30beb0, uap=0xfffffe813b30bf00, l=0xfffffe881ec4d920, sy=0xffffffff8147da40 <sysent+96>) at /fs/raid2a/src/NetBSD/cur/src/sys/sys/syscallvar.h:94
#16 syscall (frame=0xfffffe813b30bf00) at /fs/raid2a/src/NetBSD/cur/src/sys/arch/x86/x86/syscall.c:156
#17 0xffffffff80200771 in Xsyscall ()
(gdb)
>How-To-Repeat:
	see above
>Fix:
	Avoid NULL pointers for data access? 

>Release-Note:

>Audit-Trail:

State-Changed-From-To: open->feedback
State-Changed-By: ozaki-r@NetBSD.org
State-Changed-When: Fri, 17 Mar 2017 10:05:41 +0000
State-Changed-Why:
Fixed in -current. Could you confirm?


From: "Ryota Ozaki" <ozaki-r@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/52083 CVS commit: src/sys/net
Date: Fri, 17 Mar 2017 10:05:02 +0000

 Module Name:	src
 Committed By:	ozaki-r
 Date:		Fri Mar 17 10:05:02 UTC 2017

 Modified Files:
 	src/sys/net: rtsock.c

 Log Message:
 Add missing NULL check

 Fix PR kern/52083


 To generate a diff of this commit:
 cvs rdiff -u -r1.208 -r1.209 src/sys/net/rtsock.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Frank Kardel <kardel@netbsd.org>
To: gnats-bugs@NetBSD.org, kern-bug-people@netbsd.org, 
 netbsd-bugs@netbsd.org, gnats-admin@netbsd.org, ozaki-r@NetBSD.org
Cc: 
Subject: Re: kern/52083 (panic: trap - route change -inet6 default -reject)
Date: Fri, 17 Mar 2017 16:37:56 +0100

 On 03/17/17 11:05, ozaki-r@NetBSD.org wrote:
 > Synopsis: panic: trap - route change -inet6 default -reject
 >
 > State-Changed-From-To: open->feedback
 > State-Changed-By: ozaki-r@NetBSD.org
 > State-Changed-When: Fri, 17 Mar 2017 10:05:41 +0000
 > State-Changed-Why:
 > Fixed in -current. Could you confirm?
 >
 >
 >
 Yepp - fixed. Thank for the quick fix.

 PR can be closed.

 Frank

State-Changed-From-To: feedback->closed
State-Changed-By: ozaki-r@NetBSD.org
State-Changed-When: Sat, 18 Mar 2017 07:26:05 +0000
State-Changed-Why:
The reporter confirmed the fix.


From: "Ryota Ozaki" <ozaki-r@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/52083 CVS commit: src/tests/net/route
Date: Tue, 21 Mar 2017 04:03:17 +0000

 Module Name:	src
 Committed By:	ozaki-r
 Date:		Tue Mar 21 04:03:17 UTC 2017

 Modified Files:
 	src/tests/net/route: t_route.sh

 Log Message:
 Add a test case for PR kern/52083


 To generate a diff of this commit:
 cvs rdiff -u -r1.10 -r1.11 src/tests/net/route/t_route.sh

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.