Add missing NULL check

Fix PR kern/52083